--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -100,7 +100,13 @@ body {
 }
 
 .member {
+	width: 100%;
 	display:flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	padding: 5px
+	border: 2px solid #000000;
+	border-radius:15%;
 }
 .member div {
 	width: 50%:
@@ -299,33 +305,6 @@ footer {
 
 /* Mobile */
 @media (max-width: 320px) {
-.logo {
-	width: 100%;
-	text-align: center;
-	margin-top: 13px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-}
-.container header nav {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	width: 100%;
-	float: none;
-	display: none;
-}
-header nav ul {
-}
-nav ul li {
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	width: 100%;
-	text-align: center;
-}
 .text_column {
 	width: 100%;
 	text-align: justify;
@@ -385,33 +364,6 @@ nav ul li {
 
 /* Small Tablets */
 @media (min-width: 321px)and (max-width: 767px) {
-nav {
-	float: right;
-	width: 100%;
-	text-align: right;
-	margin-right: 5px;
-}
-header nav ul {
-	list-style: none;
-	float: right;
-}
-nav ul li {
-	float: left;
-	color: #FFFFFF;
-	font-size: 14px;
-	text-align: left;
-	margin-right: 10px;
-	letter-spacing: 2px;
-	font-weight: bold;
-	transition: all 0.3s linear;
-}
-nav ul li a {
-	color: #FFFFFF;
-	text-decoration: none;
-}
-nav ul li:hover a {
-	color: #2C9AB7;
-}
 .text_column {
 	width: 100%;
 	text-align: left;
