--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -96,34 +96,40 @@ body {
 	max-width: 100%;
 }
 .members {
+	margin: 0 auto;
 	text-align: center;
+	max-width: 640px;
+}
+.members_list {
+	margin: 2rem;
+}
+.member_item {
+	display:flex;
+	margin: 4rem auto;
+	border: 1px  solid #000000;
+	border-radius:20px;
+}
+.member_item:nth-child(odd) {
+	flex-direction: row-reverse;
+}
+.member_item_list,.member_img {
+	width:50%
+}
+.member_img {
+	border-radius:20px 0 0 20px;
+}
+.member_item_list {
+	text-align: center;
+	margin: auto 0;
+}
+.member_item_name {
+	font-size: 1.6rem;
+	margin: auto 3rem;
+	padding: 20px 0;
 }
 
-.member {
-	width: 100%;
-	display:flex;
-	flex-direction: row-reverse;
-	justify-content: space-between;
-	padding: 5px
-	border: 2px solid #000000;
-	border-radius:15%;
-}
-.member div {
-	width: 50%:
-}
-.member div img {
-	width: 100%;
-	height: auto;
-}
-.member div div {
-	width: 50%:
-	text-align: center;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
 .member_icon{
-        display: flex;
-        flex-wrap:wrap;
+    display: flex;
 	list-style-type: none;
 	padding-left: 0;
 	justify-content: center;
@@ -135,12 +141,12 @@ body {
 	list-style:none;
 }
 .member_icon li img {
-        max-width:100%; 
+    max-width:100%; 
 	border-radius:50%;
     }
 
 hr {
-	margin-top:20px;
+	margin:30px 0;
 }
 
 .about {
