--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -25,7 +25,7 @@ header {
 	width: 0%;
 	float: left;
 }
-nav {
+header nav {
 	float: right;
 	width: 100%;
 	text-align: right;
@@ -35,7 +35,7 @@ header nav ul {
 	list-style: none;
 	float: right;
 }
-nav ul li {
+header nav ul li {
 	float: left;
 	color: #FFFFFF;
 	font-size: 14px;
@@ -45,7 +45,7 @@ nav ul li {
 	font-weight: bold;
 	transition: all 0.3s linear;
 }
-nav ul li a {
+header nav ul li a {
 	color: #FFFFFF;
 	text-decoration: none;
 }
@@ -76,10 +76,7 @@ nav ul li a {
 	padding-bottom: 20px;
 }
 .icon {text-align: center;}
-.light {
-	font-weight: bold;
-	color: #717070;
-}
+
 .tagline {
 	text-align: center;
 	color: #000000;
@@ -88,17 +85,7 @@ nav ul li a {
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
-/* About Section */
-.text_column {
-	width: 29%;
-	text-align: justify;
-	font-weight: lighter;
-	line-height: 25px;
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	color: #A3A3A3;
-}
+
 .center {
 	text-align: center
 }
