--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -93,33 +93,34 @@ header nav ul li a {
 .official_link{
         display: flex;
         flex-wrap:wrap;
-		list-style-type: none;
-	    padding-left: 0;
-		justify-content: center;
+	list-style-type: none;
+	padding-left: 0;
+	justify-content: center;
 	width:100%;
 }
 .official_link li {
-    max-width: 32px;
-    padding:0 5px;
+    	max-width: 32px;
+    	padding:0 5px;
 	list-style:none;
 }
 .official_link li img {
-    max-width:100%; 
+    	max-width:100%; 
 	border-radius:50%;
-    }
+}
 
 .media {
 	text-align: center;
 	padding-top: 35px;
 }
 .youtube iframe {
-  max-width: 100%;
-  width: 780px;
-  height: auto;
-  aspect-ratio: 16/9;
+  	max-width: 100%;
+  	width: 780px;
+  	height: auto;
+  	aspect-ratio: 16/9;
+  	margin: 20px 0;
 }
 .wp-block-embed-spotify > .wp-block-embed__wrapper {
-  text-align: center;
+  	text-align: center;
 }
 .spotify iframe {
 	max-width: 100%;
@@ -164,19 +165,19 @@ header nav ul li a {
 
 .member_icon{
 	height: 50%;
-    display: flex;
+    	display: flex;
 	list-style-type: none;
 	padding-left: 0;
 	justify-content: center;
 	width:100%;
 }
 .member_icon li {
-    max-width: 32px;
-    padding:0 5px;
+    	max-width: 32px;
+    	padding:0 5px;
 	list-style:none;
 }
 .member_icon li img {
-    max-width:100%; 
+    	max-width:100%; 
 	border-radius:50%;
     }
 
