--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* Body */
 body {
-	font-family: "メイリオ", meiryo, source-sans-pro;
+	font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
 	background-color: #ffffff;
 	margin-top: 0px;
 	margin-right: 0px;
@@ -18,18 +18,11 @@ header {
 	background-color: #000000;
 	border-bottom: 1px solid #000000;
 }
-.logo {
-	color: #fff;
-	font-weight: bold;
-	text-align: undefined;
-	width: 0%;
-	float: left;
-}
 header nav {
 	float: right;
 	width: 100%;
 	text-align: right;
-	margin-right: 5%;
+	margin-right: 2%;
 }
 header nav ul {
 	list-style: none;
