--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -166,7 +166,7 @@ header nav ul li a {
 }
 .member_item_birth {
 	font-size: 0.8rem;
-	color: #FFFFFF;
+	color: #000000;
 	height: 20%;
 	margin-top: 10px;
 	letter-spacing: 1px;
