--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -71,7 +71,7 @@ header nav ul li a {
 }
 .icon {
 	text-align: center;
-      	border-radius:20px 0 0 20px;
+      	border-radius:20px 20px;
 }
 
 .tagline {
