--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -175,6 +175,7 @@ header nav ul li a {
 	padding-left: 0;
 	justify-content: center;
 	width:100%;
+	margin:0;
 }
 .member_icon li {
     	max-width: 32px;
